# Proj-2.0-Docker-K8s-Helm

./: .gitignore  CHANGELOG.md  README.md  api.jayaraj.dev-key.pem  api.jayaraj.dev.pem  helm-output.yml  istio-ingress.yml  secret.yml  test-deployed-backend.py
.github/workflows/: docker-build.yml
backend/: .env.txt  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test-app.py
backend/alembic/: env.py
backend/app/: dependencies.py  main.py
backend/app/api/v1/: schemas.py
backend/app/api/v1/routes/: events.py  notifications.py
backend/app/api/v1/routes.py/: __init__.py  events.py  notifications.py
backend/app/constants/: types.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/db/crud/: crud_event.py  crud_notification.py  crud_reminder.py
backend/app/db/models/: event.py  notification.py  reminder.py
backend/app/tests/: test_notifications.py
backend/app/utils/: email_utils.py  sms_utils.py
backend/app/utlis/: email_utils.py
backend/app/workers/: consumer.py  producer.py
event-system/: Chart.yaml  values.yaml
event-system/templates/: NOTES.txt  _helpers.tpl  backend-deployment.yaml  backend-service-monitor.yml  backend-service.yaml  hpa.yaml  httproute.yaml  ingress.yaml  istio-gateway.yml  istio-virtualservice-backend.yml  scheduler-deployment.yml  scheduler-service.yml  service.yaml  serviceaccount.yaml  worker-deployment.yml  worker-service.yml
project-plan/: README.md  final-process.md  initial-plan.md  isses-faced.md
project-plan/backend-plan/: initial-plan.md  updates.md
(+5 files in other folders)
