[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.121.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "rq>=2.6.0",
    "rq-dashboard>=0.8.5",
    "rq-scheduler>=0.14.0",
    "sqlalchemy>=2.0.44",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.38.0",
]
